--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ section{
 .section_one{
     width: 50%;
     padding-left: 5%;
+    float: left;
+    margin-left:  5%;
 }
 .section_one img{
     width: 80%;
@@ -31,4 +33,9 @@ section{
 .top_banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.middel_banner{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-size: 5%;
 }
